Update REST API
