# src/gen/swagger/com/sonicle/webtop/calendar/swagger/v1/api/CaldavApi.java
@@ -19,18 +19,18 @@ import javax.validation.Valid;
 
 @Path("/caldav")
 @Api(description = "the caldav API")
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-05-16T11:37:57.756+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-05-16T13:12:10.819+02:00")
 public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
 
     @POST
-    @Path("/calendars/{calendarId}/objects")
+    @Path("/calendars/{calendarUid}/objects")
     @Consumes({ "application/json" })
     @ApiOperation(value = "Adds a new calendar object", notes = "", response = Void.class, authorizations = {
         @Authorization(value = "Basic authentication")
     }, tags={ "dav-cal-objects",  })
     @ApiResponses(value = { 
         @ApiResponse(code = 201, message = "Success", response = Void.class) })
-    public Response addCalObject(@PathParam("calendarId") Integer calendarId,@Valid CalObjectNew body) {
+    public Response addCalObject(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@Valid CalObjectNew body) {
         return Response.ok().entity("magic!").build();
     }
 
@@ -48,7 +48,7 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
     }
 
     @DELETE
-    @Path("/calendars/{calendarId}/objects/{href}")
+    @Path("/calendars/{calendarUid}/objects/{href}")
     @ApiOperation(value = "Deletes a calendar object", notes = "", response = Void.class, authorizations = {
         @Authorization(value = "Basic authentication")
     }, tags={ "dav-cal-objects",  })
@@ -56,12 +56,12 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 204, message = "Success", response = Void.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Object not found", response = Void.class) })
-    public Response deleteCalObject(@PathParam("calendarId") Integer calendarId,@PathParam("href") String href) {
+    public Response deleteCalObject(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@PathParam("href") String href) {
         return Response.ok().entity("magic!").build();
     }
 
     @DELETE
-    @Path("/calendars/{calendarId}")
+    @Path("/calendars/{calendarUid}")
     @ApiOperation(value = "Deletes a calendar", notes = "", response = Void.class, authorizations = {
         @Authorization(value = "Basic authentication")
     }, tags={ "dav-calendars",  })
@@ -70,12 +70,12 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Calendar not found", response = Void.class),
         @ApiResponse(code = 405, message = "Delete operation is not allowed", response = Void.class) })
-    public Response deleteCalendar(@PathParam("calendarId") @ApiParam("Calendar ID") Integer calendarId) {
+    public Response deleteCalendar(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid) {
         return Response.ok().entity("magic!").build();
     }
 
     @GET
-    @Path("/calendars/{calendarId}/objects/{href}")
+    @Path("/calendars/{calendarUid}/objects/{href}")
     @Produces({ "application/json" })
     @ApiOperation(value = "Get a single calendar object", notes = "", response = CalObject.class, authorizations = {
         @Authorization(value = "Basic authentication")
@@ -84,24 +84,24 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 200, message = "Success", response = CalObject.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Object not found", response = Void.class) })
-    public Response getCalObject(@PathParam("calendarId") Integer calendarId,@PathParam("href") String href) {
+    public Response getCalObject(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@PathParam("href") String href) {
         return Response.ok().entity("magic!").build();
     }
 
     @GET
-    @Path("/calendars/{calendarId}/objects")
+    @Path("/calendars/{calendarUid}/objects")
     @Produces({ "application/json" })
     @ApiOperation(value = "List all calendar objects belonging to a specific calendar", notes = "", response = CalObject.class, responseContainer = "List", authorizations = {
         @Authorization(value = "Basic authentication")
     }, tags={ "dav-cal-objects",  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Success", response = CalObject.class, responseContainer = "List") })
-    public Response getCalObjects(@PathParam("calendarId") Integer calendarId,@QueryParam("hrefs")    List<String> hrefs) {
+    public Response getCalObjects(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@QueryParam("hrefs")    List<String> hrefs) {
         return Response.ok().entity("magic!").build();
     }
 
     @GET
-    @Path("/calendars/{calendarId}/objects/changes")
+    @Path("/calendars/{calendarUid}/objects/changes")
     @Produces({ "application/json" })
     @ApiOperation(value = "Get calendar object changes", notes = "Returns changed calendar objects (added/modified/deleted) since the specified syncToken. If token is not provided, the initial sync configuration will be returned.", response = CalObjectsChanges.class, authorizations = {
         @Authorization(value = "Basic authentication")
@@ -109,12 +109,12 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Success", response = CalObjectsChanges.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class) })
-    public Response getCalObjectsChanges(@PathParam("calendarId") Integer calendarId,@QueryParam("syncToken")   @ApiParam("Marks changes starting point")  String syncToken,@QueryParam("limit")   @ApiParam("Limits the number of returned results")  Integer limit) {
+    public Response getCalObjectsChanges(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@QueryParam("syncToken")   @ApiParam("Marks changes starting point")  String syncToken,@QueryParam("limit")   @ApiParam("Limits the number of returned results")  Integer limit) {
         return Response.ok().entity("magic!").build();
     }
 
     @GET
-    @Path("/calendars/{calendarId}")
+    @Path("/calendars/{calendarUid}")
     @Produces({ "application/json" })
     @ApiOperation(value = "Gets a single calendar", notes = "", response = Calendar.class, authorizations = {
         @Authorization(value = "Basic authentication")
@@ -123,7 +123,7 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 200, message = "Success", response = Calendar.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Calendar not found", response = Void.class) })
-    public Response getCalendar(@PathParam("calendarId") @ApiParam("Calendar ID") Integer calendarId) {
+    public Response getCalendar(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid) {
         return Response.ok().entity("magic!").build();
     }
 
@@ -140,7 +140,7 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
     }
 
     @PUT
-    @Path("/calendars/{calendarId}/objects/{href}")
+    @Path("/calendars/{calendarUid}/objects/{href}")
     @Consumes({ "text/calendar" })
     @ApiOperation(value = "Updates a calendar object", notes = "", response = Void.class, authorizations = {
         @Authorization(value = "Basic authentication")
@@ -149,12 +149,12 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 200, message = "Success", response = Void.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Object not found", response = Void.class) })
-    public Response updateCalObject(@PathParam("calendarId") Integer calendarId,@PathParam("href") String href,@Valid String body) {
+    public Response updateCalObject(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@PathParam("href") String href,@Valid String body) {
         return Response.ok().entity("magic!").build();
     }
 
     @PUT
-    @Path("/calendars/{calendarId}")
+    @Path("/calendars/{calendarUid}")
     @Consumes({ "application/json" })
     @ApiOperation(value = "Updates a calendar", notes = "", response = Void.class, authorizations = {
         @Authorization(value = "Basic authentication")
@@ -163,7 +163,7 @@ public class CaldavApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
         @ApiResponse(code = 200, message = "Success", response = Void.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Calendar not found", response = Void.class) })
-    public Response updateCalendar(@PathParam("calendarId") @ApiParam("Calendar ID") Integer calendarId,@Valid CalendarUpdate body) {
+    public Response updateCalendar(@PathParam("calendarUid") @ApiParam("Calendar UID") String calendarUid,@Valid CalendarUpdate body) {
         return Response.ok().entity("magic!").build();
     }
 }
